# Aicareer

./: SYSTEM_WORKFLOW.md  migrate_database.py
.claude/: settings.local.json
career-advisor-frontend/: package-lock.json  package.json
career-advisor-frontend/src/: App.css  App.tsx
career-advisor-frontend/src/components/: AIChat.tsx  Analytics.tsx  CareerAnalysis.tsx  Dashboard.tsx  Login.tsx  Navbar.tsx  OnboardingQuestionnaire.tsx  Registration.tsx  Settings.tsx  UserProfile.tsx
career-advisor-frontend/src/services/: api.ts
career_advisor_agents/: .env  .env.example  API_ENDPOINTS.md  README.md  career_advisor.db  pyproject.toml  requirements.txt  run_server.py
career_advisor_agents/agents/: career_analyst.py  learning_orchestrator.py  mentor_bot.py  opportunity_scout.py  progress_monitor.py  skills_assessor.py
career_advisor_agents/api/: main.py  routes.py
career_advisor_agents/career_advisor_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
career_advisor_agents/core/: agent_framework.py  data_models.py  llm_config.py
career_advisor_agents/data/: career_data.json  industry_trends.json  skills_taxonomy.json
career_advisor_agents/services/: career_counseling.py  database.py  onboarding_questionnaire.py  predictive_analytics.py
