[project]
name = "career-advisor-agents"
version = "1.0.0"
description = "AI Career & Skill Development Advisor Agent System"
requires-python = ">=3.9"
authors = [
    {name = "Career Advisor Team", email = "team@careeradvisor.com"}
]
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "langchain>=0.1.0,<1.0.0",
    "langchain-google-genai>=0.0.6,<1.0.0",
    "langchain-community>=0.0.10,<1.0.0",
    "google-generativeai>=0.3.2,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.23,<3.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.1,<2.0.0",
    "chromadb>=0.4.18,<1.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "aiohttp>=3.9.1,<4.0.0",
    "httpx>=0.25.2,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "pandas>=2.1.4,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scipy>=1.11.4,<2.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "plotly>=5.17.0,<6.0.0",
    "aiofiles>=23.2.1,<24.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "structlog>=23.2.0,<24.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "python-slugify>=8.0.1,<9.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "black>=23.11.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.7.1,<2.0.0",
]

production = [
    "gunicorn>=21.2.0,<22.0.0",
    "prometheus-client>=0.19.0,<1.0.0",
]

caching = [
    "redis>=5.0.1,<6.0.0",
    "aioredis>=2.0.1,<3.0.0",
]

nlp = [
    "spacy>=3.7.2,<4.0.0",
    "transformers>=4.36.0,<5.0.0",
    "torch>=2.1.2,<3.0.0",
]

docs = [
    "sphinx>=7.2.6,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]

[project.scripts]
career-advisor = "api.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agents", "api", "core", "services"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"